# project_ml_course

./: .gitignore  README.md  pyproject.toml
data/: dados.csv
models/: lightgbm_model.pkl  svm_model.pkl
notebooks/: 01_correlation.ipynb  01_eda.ipynb  02_benchmark.ipynb  02_classifier_with_threshold.ipynb  02_pca.ipynb  03_feature_selection_or_pca.ipynb  03_pca.ipynb  04_hp_tuning_svm.ipynb  04_svm.ipynb  05_hp_tuning_lgbm.ipynb  05_hp_tuning_svm.ipynb  06_hp_tuning_lgbm.ipynb  06_performance.ipynb  07_performance.ipynb  07_shap.ipynb  TrabalhoFinal.ipynb
src/: data_process.py
src/project_ml_course/: data_process.py  lgbm_params.json  svm_params.json  train_lightgbm.py  train_svm.py
