[project]
name = "projeto-final-aprendizado-maquina"
version = "0.1.0"
description = "Projeto Final da materia aprendizado de maquina"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.8",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.3",
    "notebook>=7.4.4",
    "optuna>=4.4.0",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "xgboost>=3.0.2",
]
